Profile Page Updated with Cal Count Mental Health Design Started

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FitApp_v11">
         <activity
+            android:name=".mental_health_tracker"
+            android:exported="false" />
+        <activity
             android:name=".nutrition_tracker"
             android:exported="false" />
         <activity
